tests/module/mod183.stderr

mod183.hs:5:26: error: [GHC-05661]
    Multiple occurrences of 'qualified'
